# claudefm-tray

./: .gitignore  README.md  claudefm-tray.desktop  install.sh  pyproject.toml
src/claudefm_tray/: __init__.py  app.py  config.py  sparkline.py  stream.py  tray.py
